--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+/* src/index.css */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 
 body {
@@ -12,4 +16,8 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.h{
+  background-color:red;
 }
